[package]
name = "interpreter"
version = "0.1.0"
authors = ["Martín Coll <martingonzalezcoll@gmail.com>"]
edition = "2018"

[dependencies]
risp = "0.7.0"
risp-yaml = { path = "./risp-yaml" }
# TODO might not be needed
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[workspace]
members = [
    "risp-yaml",
    "serde-yaml-reflection",
]
