[package]
name = "lambda-calculus-yaml"
version = "0.1.0"
authors = ["Martín Coll <martingonzalezcoll@gmail.com>"]
edition = "2018"

[dependencies]
lambda_calculus = "^3.0"
reflection = { path = "../serde-yaml-reflection" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_test = "1.0.117"
