[package]
name = "risp-yaml"
version = "0.1.0"
authors = ["Martín Coll <martingonzalezcoll@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflection = { path = "../serde-yaml-reflection" }
risp = { path = "../risp" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_test = "1.0.117"
